# training

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LocalDockerFile  README.md  dev-requirements.in  dev-requirements.txt  docker-compose-local.yaml  docker-compose.yaml  entrypoint.sh  makefile  pyproject.toml  requirements.in  requirements.txt  tox.ini
.docker/dev/: Dockerfile
.docker/prod/: Dockerfile
.github/workflows/: main.yml
ansible/: ansible.cfg  deploy.yml  hosts  quick-deploy.yml
ansible/templates/: training.shivan.xyz
config/: .null-ls_494191_settings.py  celery.py  gunicorn.py  settings.py  urls.py
docker/dev/: Dockerfile  docker-compose.yaml  entrypoint.sh
docker/prod/: Dockerfile  docker-compose.yaml
project/: admin.py  apps.py  signals.py  tasks.py  urls.py  views.py
project/admin/: __init__.py  athletes.py  base.py  coaches.py  comments.py  profiles.py  programme_sessions.py  teams.py
project/admin/exercise/: __init__.py  exercise_categories.py  exercise_sets.py  exercise_types.py  exercises.py
project/forms/: __init__.py  athletes.py  base.py  coaches.py  profiles.py
project/forms/coaches/: __init__.py  exercise.py  (+2 more)
project/migrations/: 0001_initial.py  0002_initial.py  0003_remove_comment_project_com_content_e22fca_idx_and_more.py  0003_remove_exercisetype_contributors_and_more.py  0004_alter_programmesession_options_and_more.py  0004_exerciseset_sets_historicalexerciseset_sets.py  0005_alter_comment_author_ct_alter_comment_location_ct_and_more.py  0005_comment_read_historicalcomment_read_and_more.py  0006_exercise_order_exerciseset_order_and_more.py  0006_remove_exercise_weight_unit_and_more.py  0007_alter_exerciseset_weight_and_more.py  0007_historicalprogrammesession_is_draft_and_more.py  0008_alter_exerciseset_weight_and_more.py  0008_remove_historicalprogrammesession_is_draft_and_more.py  0009_alter_exerciseset_weight_and_more.py  0009_historicalprogrammesession_published_and_more.py  0010_alter_exercise_exercise_type_and_more.py  0010_alter_exerciseset_weight_unit_and_more.py  0011_alter_comment_author_object_id_and_more.py
project/models/: __init__.py  athletes.py  base.py  coaches.py  comments.py  profiles.py  programme_sessions.py  teams.py
project/templatetags/: active_page.py  dates_text.py
project/utils/: __init__.py  ordering.py
project/views/: __init__.py  athletes.py  coaches.py  exercises.py  exercises_types.py  index.py  profiles.py  programme_sessions.py
requirements/: dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
static/js/: index.js
templates/: 403.html  404.html  500.html  index.html  profile.html  profile_update.html
templates/account/: email.html  login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html  social_logins.html
templates/athletes/: add.html  list.html
templates/base/: base.html  base_box.html  navbar.html
templates/coaches/: add_athlete.html  athlete_programme_create.html  athlete_programme_list.html  portal.html
templates/components/: athlete_card.html  centered_links.html  comment.html  horizontal_field.html  notes.html  primary_form_button.html  programme_list.html  social_logins.html
templates/exercise_types/: detail.html  list.html
templates/index/: index.html
templates/partials/: avatar.html  comment.html  history.html  programme_session_inline.html
templates/profile/: profile.html  update.html
templates/programme/: detail.html  list.html
templates/programme_sessions/: list.html
templates/socialaccount/: authentication_error.html  connections.html  login.html  login_cancelled.html
tests/: conftest.py  test_main.py  test_programme_sessions.py  test_users.py
tests/factories/: __init__.py  athletes.py  coaches.py  profiles.py  programme_sessions.py  teams.py  users.py
users/: admin.py  apps.py  forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0002_customuser_deleted_at_alter_customuser_name_and_more.py  0002_remove_customuser_name_customuser_deleted_at_and_more.py  0003_alter_customuser_username_and_more.py  0003_remove_customuser_first_name_and_more.py  0004_alter_customuser_date_joined_and_more.py  0004_customuser_avatar_historicalcustomuser_avatar.py  0005_alter_customuser_date_joined_and_more.py  0005_remove_customuser_avatar_remove_customuser_name_and_more.py  0006_alter_customuser_date_joined_and_more.py  0007_alter_customuser_date_joined_and_more.py  0008_alter_customuser_date_joined_and_more.py  0009_alter_customuser_date_joined_and_more.py  0010_alter_customuser_date_joined_and_more.py  0011_alter_customuser_date_joined_and_more.py  0012_alter_customuser_date_joined_and_more.py
(+47 files in other folders)
